src/objects/AppSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CreditNotesNotificationBcc__c</fullName>
        <label>Credit Notes Notification Bcc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditNotesNotificationRecipients__c</fullName>
        <label>Credit Notes Notification Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyAPIAccountID__c</fullName>
        <label>CurrencyAPIAccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyAPIEndpoint__c</fullName>
        <label>CurrencyAPIEndpoint</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyAPIKey__c</fullName>
        <label>Currency API Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyUserLogin__c</fullName>
        <label>CurrencyUserLogin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyUserPassword__c</fullName>
        <label>CurrencyUserPassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNotificationBcc__c</fullName>
        <label>Invoice Notification Bcc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNotificationCC__c</fullName>
        <label>Invoice Notification CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNotificationRecipients__c</fullName>
        <label>Invoice Notification Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityNotificationCC__c</fullName>
        <label>Opportunity Notification CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreLaunchNotificationBcc__c</fullName>
        <label>PreLaunch Notification Bcc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeDataWarehouseSyncToken__c</fullName>
        <label>StrikeDataWarehouseSyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeDataWarehouseSyncURL__c</fullName>
        <label>StrikeDataWarehouseSyncURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeDataWarehouseSyncUser__c</fullName>
        <label>StrikeDataWarehouseSyncUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeDataWarehouseToken__c</fullName>
        <label>StrikeDataWarehouseToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeDataWarehouseURL__c</fullName>
        <label>StrikeDataWarehouseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeDataWarehouseUser__c</fullName>
        <label>StrikeDataWarehouseUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App Settings</label>
</CustomObject>